fix too wide chart output with some css

--- a/src/styles/basic.css
+++ b/src/styles/basic.css
@@ -24,3 +24,8 @@
   color: #333;
   font-weight: bold;
 }
+
+div.cell_display img {
+  max-width: 790px;
+  height: auto;
+}
